--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="bg-gray-500 max-h-screen">
     <div id="app" class="flex items-center justify-center gap-1">
       <button
-        class="border-2 border-gray-900 rounded-full p-2 active:scale-90 duration-75"
+        class="prevBtn border-2 border-gray-900 rounded-full p-2 active:scale-90 duration-75"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -27,9 +27,20 @@
         </svg>
       </button>
       <div class="w-[400px] mt-5 border border-stone-950 rounded-md p-3">
-        <audio src="" id="audio"></audio>
-        <h2 class="text-2xl font-bold text-gray-300" id="title">Title</h2>
-        <h4 class="text-gray-400 mb-2" id="singer">Singer</h4>
+        <div class="flex justify-between">
+          <div class="">
+            <audio src="" id="audio"></audio>
+            <h2 class="text-2xl font-bold text-gray-300" id="title">Title</h2>
+            <h4 class="text-gray-400 mb-2" id="singer">Singer</h4>
+          </div>
+          <div>
+            <img
+              id="trackImg"
+              src="./img/track1.jpg"
+              class="size-[75px] rounded-md shadow-lg"
+            />
+          </div>
+        </div>
         <hr class="my-2" />
         <div class="flex gap-1 mb-4">
           <span id="currentTime">00:00</span>
@@ -50,7 +61,7 @@
 
         <button
           id="prevBtn"
-          class="border border-stone-800 px-3 py-1 rounded-lg"
+          class="prevBtn border border-stone-800 px-3 py-1 rounded-lg"
         >
           Prev
         </button>
@@ -76,13 +87,13 @@
 
         <button
           id="nextBtn"
-          class="border border-stone-800 px-3 py-1 rounded-lg"
+          class="nextBtn border border-stone-800 px-3 py-1 rounded-lg"
         >
           Next
         </button>
       </div>
       <button
-        class="border-2 border-gray-900 rounded-full p-2 active:scale-90 duration-75"
+        class="nextBtn border-2 border-gray-900 rounded-full p-2 active:scale-90 duration-75"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
