--- a/index.html
+++ b/index.html
@@ -7,25 +7,10 @@
     <title>Vite App</title>
   </head>
   <body class="bg-gray-500 max-h-screen">
-    <div id="app" class="flex items-center justify-center gap-1">
-      <button
-        class="prevBtn border-2 border-gray-900 rounded-full p-2 active:scale-90 duration-75"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="size-6 pointer-events-none"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M21 16.811c0 .864-.933 1.406-1.683.977l-7.108-4.061a1.125 1.125 0 0 1 0-1.954l7.108-4.061A1.125 1.125 0 0 1 21 8.689v8.122ZM11.25 16.811c0 .864-.933 1.406-1.683.977l-7.108-4.061a1.125 1.125 0 0 1 0-1.954l7.108-4.061a1.125 1.125 0 0 1 1.683.977v8.122Z"
-          />
-        </svg>
-      </button>
+    <div
+      id="app"
+      class="flex w-[400px] mx-auto items-center justify-center gap-1"
+    >
       <div class="w-[400px] mt-5 border border-stone-950 rounded-md p-3">
         <div class="flex justify-between">
           <div class="">
@@ -47,7 +32,7 @@
           <span>/</span>
           <span id="duration">00:00</span>
         </div>
-        <div class="mb-10">
+        <div class="mb-4">
           <div
             id="progress-area"
             class="w-full h-2 bg-stone-800 rounded-lg relative cursor-pointer"
@@ -59,57 +44,93 @@
           </div>
         </div>
 
-        <button
-          id="prevBtn"
-          class="prevBtn border border-stone-800 px-3 py-1 rounded-lg"
-        >
-          Prev
-        </button>
-        <button
-          id="replayBtn"
-          class="border border-stone-800 px-3 py-1 rounded-lg"
-        >
-          Restart
-        </button>
-        <button
-          id="playBtn"
-          class="border border-stone-800 px-3 py-1 rounded-lg"
-        >
-          Play
-        </button>
+        <div class="flex gap-1 justify-center">
+          <button
+            id="prevBtn"
+            class="prevBtn border border-stone-800 p-1 rounded-full active:scale-90"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-5 pointer-events-none"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M21 16.811c0 .864-.933 1.406-1.683.977l-7.108-4.061a1.125 1.125 0 0 1 0-1.954l7.108-4.061A1.125 1.125 0 0 1 21 8.689v8.122ZM11.25 16.811c0 .864-.933 1.406-1.683.977l-7.108-4.061a1.125 1.125 0 0 1 0-1.954l7.108-4.061a1.125 1.125 0 0 1 1.683.977v8.122Z"
+              />
+            </svg>
+          </button>
+          <button
+            id="replayBtn"
+            class="border hidden border-stone-800 px-3 py-1 rounded-lg"
+          >
+            Restart
+          </button>
+          <button
+            id="playBtn"
+            class="border border-stone-800 p-1 rounded-full active:scale-90"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-5"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.347a1.125 1.125 0 0 1 0 1.972l-11.54 6.347a1.125 1.125 0 0 1-1.667-.986V5.653Z"
+              />
+            </svg>
+          </button>
 
-        <button
-          id="pauseBtn"
-          class="border border-stone-800 px-3 py-1 rounded-lg"
-        >
-          Pause
-        </button>
+          <button
+            id="pauseBtn"
+            class="border hidden border-stone-800 p-1 rounded-full active:scale-90"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-5"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M15.75 5.25v13.5m-7.5-13.5v13.5"
+              />
+            </svg>
+          </button>
 
-        <button
-          id="nextBtn"
-          class="nextBtn border border-stone-800 px-3 py-1 rounded-lg"
-        >
-          Next
-        </button>
+          <button
+            id="nextBtn"
+            class="nextBtn border border-stone-800 p-1 rounded-full active:scale-90"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-5 pointer-events-none"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M3 8.689c0-.864.933-1.406 1.683-.977l7.108 4.061a1.125 1.125 0 0 1 0 1.954l-7.108 4.061A1.125 1.125 0 0 1 3 16.811V8.69ZM12.75 8.689c0-.864.933-1.406 1.683-.977l7.108 4.061a1.125 1.125 0 0 1 0 1.954l-7.108 4.061a1.125 1.125 0 0 1-1.683-.977V8.69Z"
+              />
+            </svg>
+          </button>
+        </div>
       </div>
-      <button
-        class="nextBtn border-2 border-gray-900 rounded-full p-2 active:scale-90 duration-75"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="size-6 pointer-events-none"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M3 8.689c0-.864.933-1.406 1.683-.977l7.108 4.061a1.125 1.125 0 0 1 0 1.954l-7.108 4.061A1.125 1.125 0 0 1 3 16.811V8.69ZM12.75 8.689c0-.864.933-1.406 1.683-.977l7.108 4.061a1.125 1.125 0 0 1 0 1.954l-7.108 4.061a1.125 1.125 0 0 1-1.683-.977V8.69Z"
-          />
-        </svg>
-      </button>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
