--- a/index.html
+++ b/index.html
@@ -7,128 +7,250 @@
     <title>Vite App</title>
   </head>
   <body class="bg-gray-500 max-h-screen">
-    <div
-      id="app"
-      class="flex w-[400px] p-5 mx-auto items-center justify-center gap-1"
-    >
-      <div class="w-[400px] mt-5 border border-stone-950 rounded-md p-3">
-        <div id="trackInfo" class="flex justify-between">
-          <div class="">
-            <audio src="" id="audio"></audio>
-            <h2 class="text-2xl font-bold text-gray-300" id="title">Title</h2>
-            <h4 class="text-gray-400 mb-2" id="singer">Singer</h4>
+    <div class="w-[400px] mx-auto">
+      <div
+        id="app"
+        class="flex w-full flex-col h-screen mx-auto items-center justify-between px-4 py-12"
+      >
+        <!-- Dynamic Island Area -->
+        <!--  animate__animated animate__fadeIn animate__delay-2s -->
+        <div
+          id="dynamicArea"
+          class="bg-stone-800 w-5 h-5 duration-300 p-4 rounded-2xl"
+        >
+          <div class="dynamicChild flex invisible gap-2">
+            <div>
+              <img
+                id="trackImg"
+                src="./img/track1.jpg"
+                class="size-[75px] rounded-md shadow-lg"
+              />
+            </div>
+            <div class="">
+              <audio src="" id="audio"></audio>
+              <h2 class="text-xl font-bold text-gray-300" id="title">Title</h2>
+              <h4 class="text-gray-400 mb-2" id="singer">Singer</h4>
+            </div>
           </div>
-          <div>
-            <img
-              id="trackImg"
-              src="./img/track1.jpg"
-              class="size-[75px] rounded-md shadow-lg"
-            />
-          </div>
-        </div>
-        <hr class="my-2" />
-        <div class="flex gap-1 mb-4">
-          <span id="currentTime">00:00</span>
-          <span>/</span>
-          <span id="duration">00:00</span>
-        </div>
-        <div class="mb-4">
-          <div
-            id="progress-area"
-            class="w-full h-2 bg-stone-800 rounded-lg relative cursor-pointer"
-          >
+          <div class="dynamicChild block invisible my-4">
             <div
-              id="progress-bar"
-              class="h-2 bg-stone-300 rounded-lg absolute"
-            ></div>
+              id="progress-area"
+              class="w-full h-1 bg-stone-600 rounded-lg relative cursor-pointer"
+            >
+              <div
+                id="progress-bar"
+                class="h-1 w-12 bg-stone-300 rounded-lg absolute"
+              ></div>
+            </div>
+          </div>
+          <div class="dynamicChild block invisible">
+            <div class="flex items-center justify-center text-white">
+              <button
+                id="prevBtn"
+                class="prevBtn border-2 border-stone-800 p-1 rounded-full active:scale-90"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="white"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-7 pointer-events-none"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M21 16.811c0 .864-.933 1.406-1.683.977l-7.108-4.061a1.125 1.125 0 0 1 0-1.954l7.108-4.061A1.125 1.125 0 0 1 21 8.689v8.122ZM11.25 16.811c0 .864-.933 1.406-1.683.977l-7.108-4.061a1.125 1.125 0 0 1 0-1.954l7.108-4.061a1.125 1.125 0 0 1 1.683.977v8.122Z"
+                  />
+                </svg>
+              </button>
+              <button
+                id="playBtn"
+                class="playBtn border-2 border-stone-800 p-1 rounded-full active:scale-90"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="white"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-7"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.347a1.125 1.125 0 0 1 0 1.972l-11.54 6.347a1.125 1.125 0 0 1-1.667-.986V5.653Z"
+                  />
+                </svg>
+              </button>
+              <button
+                id="pauseBtn"
+                class="pauseBtn border-2 hidden border-stone-800 p-1 rounded-full active:scale-90"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="white"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-7"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M15.75 5.25v13.5m-7.5-13.5v13.5"
+                  />
+                </svg>
+              </button>
+              <button
+                id="nextBtn"
+                class="nextBtn border-2 border-stone-800 p-1 rounded-full active:scale-90"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="white"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-7 pointer-events-none"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M3 8.689c0-.864.933-1.406 1.683-.977l7.108 4.061a1.125 1.125 0 0 1 0 1.954l-7.108 4.061A1.125 1.125 0 0 1 3 16.811V8.69ZM12.75 8.689c0-.864.933-1.406 1.683-.977l7.108 4.061a1.125 1.125 0 0 1 0 1.954l-7.108 4.061a1.125 1.125 0 0 1-1.683-.977V8.69Z"
+                  />
+                </svg>
+              </button>
+            </div>
           </div>
         </div>
 
-        <div class="flex gap-1 justify-center">
-          <button
-            id="prevBtn"
-            class="prevBtn border-2 border-stone-800 p-1 rounded-full active:scale-90"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="size-7 pointer-events-none"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M21 16.811c0 .864-.933 1.406-1.683.977l-7.108-4.061a1.125 1.125 0 0 1 0-1.954l7.108-4.061A1.125 1.125 0 0 1 21 8.689v8.122ZM11.25 16.811c0 .864-.933 1.406-1.683.977l-7.108-4.061a1.125 1.125 0 0 1 0-1.954l7.108-4.061a1.125 1.125 0 0 1 1.683.977v8.122Z"
+        <!-- Container -->
+        <div class="w-full border border-stone-950 rounded-md p-3">
+          <!-- Track Info -->
+          <div id="trackInfo" class="flex justify-between">
+            <div class="">
+              <audio src="" id="audio"></audio>
+              <h2 class="text-2xl font-bold text-gray-300" id="title">Title</h2>
+              <h4 class="text-gray-400 mb-2" id="singer">Singer</h4>
+            </div>
+            <div>
+              <img
+                id="trackImg"
+                src="./img/track1.jpg"
+                class="size-[75px] rounded-md shadow-lg"
               />
-            </svg>
-          </button>
-          <button
-            id="replayBtn"
-            class="border hidden border-stone-800 px-3 py-1 rounded-lg"
-          >
-            Restart
-          </button>
-          <button
-            id="playBtn"
-            class="border-2 border-stone-800 p-1 rounded-full active:scale-90"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="size-7"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.347a1.125 1.125 0 0 1 0 1.972l-11.54 6.347a1.125 1.125 0 0 1-1.667-.986V5.653Z"
-              />
-            </svg>
-          </button>
+            </div>
+          </div>
+          <hr class="my-2" />
 
-          <button
-            id="pauseBtn"
-            class="border-2 hidden border-stone-800 p-1 rounded-full active:scale-90"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="size-7"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M15.75 5.25v13.5m-7.5-13.5v13.5"
-              />
-            </svg>
-          </button>
+          <!-- Time -->
+          <div class="flex gap-1 mb-4">
+            <span id="currentTime">00:00</span>
+            <span>/</span>
+            <span id="duration">00:00</span>
+          </div>
 
-          <button
-            id="nextBtn"
-            class="nextBtn border-2 border-stone-800 p-1 rounded-full active:scale-90"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="size-7 pointer-events-none"
+          <!-- Progress Bar -->
+          <div class="mb-4">
+            <div
+              id="progress-area"
+              class="w-full h-2 bg-stone-800 rounded-lg relative cursor-pointer"
             >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M3 8.689c0-.864.933-1.406 1.683-.977l7.108 4.061a1.125 1.125 0 0 1 0 1.954l-7.108 4.061A1.125 1.125 0 0 1 3 16.811V8.69ZM12.75 8.689c0-.864.933-1.406 1.683-.977l7.108 4.061a1.125 1.125 0 0 1 0 1.954l-7.108 4.061a1.125 1.125 0 0 1-1.683-.977V8.69Z"
-              />
-            </svg>
-          </button>
+              <div
+                id="progress-bar"
+                class="h-2 bg-stone-300 rounded-lg absolute"
+              ></div>
+            </div>
+          </div>
+
+          <!-- Button -->
+          <div class="flex gap-1 justify-center">
+            <button
+              id="prevBtn"
+              class="prevBtn border-2 border-stone-800 p-1 rounded-full active:scale-90"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-7 pointer-events-none"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M21 16.811c0 .864-.933 1.406-1.683.977l-7.108-4.061a1.125 1.125 0 0 1 0-1.954l7.108-4.061A1.125 1.125 0 0 1 21 8.689v8.122ZM11.25 16.811c0 .864-.933 1.406-1.683.977l-7.108-4.061a1.125 1.125 0 0 1 0-1.954l7.108-4.061a1.125 1.125 0 0 1 1.683.977v8.122Z"
+                />
+              </svg>
+            </button>
+            <button
+              id="replayBtn"
+              class="border hidden border-stone-800 px-3 py-1 rounded-lg"
+            >
+              Restart
+            </button>
+            <button
+              id="playBtn"
+              class="playBtn border-2 border-stone-800 p-1 rounded-full active:scale-90"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-7"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.347a1.125 1.125 0 0 1 0 1.972l-11.54 6.347a1.125 1.125 0 0 1-1.667-.986V5.653Z"
+                />
+              </svg>
+            </button>
+
+            <button
+              id="pauseBtn"
+              class="pauseBtn border-2 hidden border-stone-800 p-1 rounded-full active:scale-90"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-7"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M15.75 5.25v13.5m-7.5-13.5v13.5"
+                />
+              </svg>
+            </button>
+
+            <button
+              id="nextBtn"
+              class="nextBtn border-2 border-stone-800 p-1 rounded-full active:scale-90"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-7 pointer-events-none"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M3 8.689c0-.864.933-1.406 1.683-.977l7.108 4.061a1.125 1.125 0 0 1 0 1.954l-7.108 4.061A1.125 1.125 0 0 1 3 16.811V8.69ZM12.75 8.689c0-.864.933-1.406 1.683-.977l7.108 4.061a1.125 1.125 0 0 1 0 1.954l-7.108 4.061a1.125 1.125 0 0 1-1.683-.977V8.69Z"
+                />
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </div>
